# tumpa

./: .dockerignore  .gitignore  CHANGELOG  Dockerfile.almalinux  Dockerfile.arch  Dockerfile.deb  Dockerfile.rpm  MANIFEST.in  README.md  build.md  changelog.md  dev-requirements.in  dev-requirements.txt  index.html  justfile  package.json  pnpm-lock.yaml  pyproject.toml  requirements.in  requirements.txt  run.py  run.sh  setup.py  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: linux-packages.yml
crates/tauri-plugin-tumpa-card/: Cargo.toml  build.rs
crates/tauri-plugin-tumpa-card/android/: build.gradle.kts  proguard-rules.pro
crates/tauri-plugin-tumpa-card/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-tumpa-card/android/src/main/java/: TumpaCardPlugin.kt  UsbCcidConnection.kt
crates/tauri-plugin-tumpa-card/android/src/main/res/xml/: device_filter.xml
crates/tauri-plugin-tumpa-card/ios/: Package.swift
crates/tauri-plugin-tumpa-card/ios/Sources/: TumpaCardPlugin.swift
crates/tauri-plugin-tumpa-card/permissions/: default.toml
crates/tauri-plugin-tumpa-card/permissions/autogenerated/: reference.md
crates/tauri-plugin-tumpa-card/permissions/autogenerated/commands/: begin_session.toml  clear_all_secrets.toml  clear_secret.toml  end_session.toml  read_secret.toml  transmit_apdu.toml
crates/tauri-plugin-tumpa-card/permissions/schemas/: schema.json
crates/tauri-plugin-tumpa-card/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
docs/adr/: 0001-primary-vs-signing-subkey-upload.md  0002-cold-start-performance.md
files/: in.kushaldas.Tumpa.desktop  in.kushaldas.Tumpa.icns
newui/: BMouseArea.qml  CardDetails.qml  KeysDetails.qml  UInput.qml  UPassword.qml  USaveButton.qml  main.py  main.pyproject  main.qml
packaging/debian/: changelog  control  files  rules  tumpa.install  tumpa.links  tumpa.triggers
packaging/mac/: Entitlements.plist  briefcase.toml  build_mac_app.py
scripts/: create-sourcetarball
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: card_bridge.rs  lib.rs  main.rs
src-tauri/src/commands/: card.rs  keyserver.rs  keystore.rs  mod.rs  mode.rs
src-tauri/tests/: card_tests.rs  keystore_tests.rs
src/__tests__/: public-key-support.test.js  revoked-key-lockdown.test.js  smartcard-navigation.test.js  upload-password-error.test.js
src/components/: DatePicker.vue  KeyItem.vue  OneShotBanner.vue  PasswordInput.vue  PasswordInputMobile.vue  SidebarLayout.vue  TButton.vue  WaitSpinner.vue
src/layouts/: MobileLayout.vue
src/router/: index.js
src/stores/: appStore.js
src/styles/: main.css
src/tumpa/: AddUserView.qml  AdminPin.qml  CardDetailsView.qml  GenerateKeyView.qml  KeyDetailsView.qml  KeyListView.qml  NameView.qml  PublicURL.qml  StartView.qml  UploadView.qml  UserPin.qml  WaitView.qml  __init__.py  __main__.py  app.py  commons.py  configuration.py  main.py  main.qml  testComponents.qml  test_component.py  threads.py  tumpa.pyproject  tumpa.pyproject.user.9ee7595
src/tumpa.dist-info/: METADATA  WHEEL  top_level.txt
src/tumpa/components/Buttons/: CustomButton.qml  DangerButton.qml  LeftIconButton.qml  LeftMenuButton.qml  PrimaryButton.qml
src/tumpa/components/Forms/: CheckboxInputField.qml  PasswordInputField.qml  TextInputField.qml  TextareaInputField.qml
src/tumpa/components/Utils/: ColSpacer.qml  WarningModal.qml
src/tumpa/includes/Buttons/: CustomButton.qml  DefaultButton.qml  LeftIconButton.qml  LeftMenuButton.qml  ModalDangerButton.qml  SecondaryButton.qml  TransparentButton.qml
src/tumpa/includes/Forms/: CheckboxInputField.qml  DropdownInputField.qml  KeyTypeCheckboxGroup.qml  PasswordInputField.qml  TextInputField.qml  TextareaInputField.qml
src/tumpa/includes/Utils/: ConfirmModal.qml  InfoModal.qml  KeyItem.qml  KeyValRow.qml  StatusInfo.qml  SuccessModal.qml
src/tumpa/key_widgets/: display.py  forms.py  utils.py
src/tumpa/resources/: __init__.py
src/tumpa/resources/css/: mainwindow.css
src/tumpa/smartcard_widgets/: forms.py
src/utils/: cardTransport.js  keyring.js  oneShot.js  platform.js  useCardOp.js
src/views/: AddUserIdView.vue  CardDetailsView.vue  ChangeAdminPinView.vue  ChangeKeyPasswordView.vue  ChangeUserPinView.vue  EditNameView.vue  EditUrlView.vue  ErrorView.vue  GenerateKeyView.vue  GeneratingView.vue  KeyDetailsView.vue  KeyListView.vue  StartView.vue  TouchModeView.vue  UploadToCardView.vue  UploadingView.vue  UserDetailsView.vue
src/views-mobile/: CardConnectMobile.vue  CardHomeMobile.vue  ChangeAdminPinMobile.vue  ChangeUserPinMobile.vue  EditNameMobile.vue  EditUrlMobile.vue  GenerateKeyMobile.vue  KeyDetailsMobile.vue  KeyListMobile.vue  StartMobile.vue  UploadToCardMobile.vue
tumpasrc/: __init__.py  commons.py  configuration.py
tumpasrc/key_widgets/: display.py  forms.py
tumpasrc/resources/: __init__.py
tumpasrc/resources/css/: mainwindow.css
tumpasrc/smartcard_widgets/: forms.py
