[package]
name = "tumpa"
version = "0.3.0"
description = "The Usability Minded PGP Application"
authors = ["Kushal Das"]
edition = "2021"

[lib]
name = "tumpa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt"] }
zeroize = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop gets the full libtumpa: card (PC/SC via card-backend-pcsc) +
# network (VKS upload, email verification, WKD fetch).
libtumpa = { path = "../../libtumpa", default-features = false, features = ["card", "network"] }
dirs = "6"

# Mobile builds drop libtumpa's `card` and `network` features. `card` pulls
# card-backend-pcsc which is desktop-only; `network` pulls reqwest with
# native-tls (openssl-sys) which blocks cross-compilation. Keyserver and
# card flows aren't part of the mobile MVP — see the Phase 1 plan.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
libtumpa = { path = "../../libtumpa", default-features = false }

# Integration tests under `tests/` exercise wecanencrypt APIs directly
# (predating libtumpa). Keep the dev-dep so they keep compiling. libtumpa
# pulls wecanencrypt 0.11 in as a transitive anyway; we match the version
# here so cargo resolves a single copy.
[dev-dependencies]
wecanencrypt = { version = "0.11.0", features = ["keystore", "card", "network"] }
